issues with container too large

--- a/ryansreactapp/src/styles/About.css
+++ b/ryansreactapp/src/styles/About.css
@@ -21,7 +21,7 @@
   color: #3eb6d7;
   padding-bottom: 20px;
   text-shadow: 4px 4px 4px #000000;
-  padding-top: 40px;
+  padding-top: 15px;
 }
 
 .about h1:hover{
